--- a/协同编辑/实时协同编辑的实现.md
+++ b/协同编辑/实时协同编辑的实现.md
@@ -291,10 +291,9 @@ Web Server A 和 Web Server B 同时访问数据库，结果导致 Web Server A 
 
 ## 后续
 除了文本合并，真正要做在线编辑还有很多细节处理，感兴趣的同学可以继续研究：
-	* 支持选区，看到其他人选择的文本段，当然，这也有合并问题
-	* 指针要更随文本变化移动到正确的位置
-	* 支持 undo
+
+​	* 支持选区，看到其他人选择的文本段，当然，这也有合并问题
+​	* 指针要更随文本变化移动到正确的位置
+​	* 支持 undo
 
 [原文地址](https://fex.baidu.com/blog/2014/04/realtime-collaboration/)
-
-#前端/协同编辑#
