--- a/协同编辑/实时协同编辑的实现.md
+++ b/协同编辑/实时协同编辑的实现.md
@@ -55,7 +55,7 @@ Hunk #1 FAILED at 1.
 
 其中 my-new.txt 是我修改的版本，我去掉了前面的「百度 」，只留下「Web」，其实这两处修改是不冲突的，它们可以合并成「Web 前端」，如下图所示
 
-![](%E5%AE%9E%E6%97%B6%E5%8D%8F%E5%90%8C%E7%BC%96%E8%BE%91%E7%9A%84%E5%AE%9E%E7%8E%B0/merge.png)
+![merge](https://cdn.jsdelivr.net/gh/im/oss@master/notes/images/2020/05/25/merge-20200525215858103.png)
 
 但使用 patch 命令部下，它在冲突后会生成一个新文件 my-new.txt.rej 来描述失败原因，这种展现方式不直观，需要打开两个文件比对，我们使用另一种方式来更好地展现，那就是接下来介绍的 merge 命令，它的使用方法如下：
 
@@ -237,7 +237,7 @@ insert('FE')
 
 首先第一个问题是顺序问题，因为 OT 等算法都是依赖顺序的，不同顺序会导致结果不同，我们通过下面这张图来说明：
 
-![](%E5%AE%9E%E6%97%B6%E5%8D%8F%E5%90%8C%E7%BC%96%E8%BE%91%E7%9A%84%E5%AE%9E%E7%8E%B0/order-problem.png)
+![order-problem](https://cdn.jsdelivr.net/gh/im/oss@master/notes/images/2020/05/25/order-problem-20200525215915522.png)
 假设 Client A 在做两次修改时发了两个异步请求，可能因为网络延迟导致第二个请求反而先到了，导致最终服务器版本和 Client A 所看到的不一致，同样在服务器发往其它客户端的请求时也会出现乱序的问题，如图中 Client B 也有问题。
 
 这个问题的解决方法很简单，我们可以在客户端和服务器端都加上队列来保证请求顺序，等前一个请求结束后再发下一个请求。
@@ -246,7 +246,7 @@ insert('FE')
 
 如果有多台服务器，或者有多个线程/进程在同时处理请求时就会遇到覆盖问题，因为读写数据库并不是原子操作，比如下面的例子：
 
-![](%E5%AE%9E%E6%97%B6%E5%8D%8F%E5%90%8C%E7%BC%96%E8%BE%91%E7%9A%84%E5%AE%9E%E7%8E%B0/data-atomic.png)
+![data-atomic](https://cdn.jsdelivr.net/gh/im/oss@master/notes/images/2020/05/25/data-atomic-20200525215738417.png)
 Web Server A 和 Web Server B 同时访问数据库，结果导致 Web Server A 的修改被覆盖了。
 
 好在这种问题还算比较常见，解决办法可以有 3 种：
@@ -261,12 +261,21 @@ Web Server A 和 Web Server B 同时访问数据库，结果导致 Web Server A 
 
 在前面的例子中，两段新文本的修改都是基于同一个旧版本的，如果旧版本不一样，就有可能出错，具体可以通过下面这张图来解释：
 
-![](%E5%AE%9E%E6%97%B6%E5%8D%8F%E5%90%8C%E7%BC%96%E8%BE%91%E7%9A%84%E5%AE%9E%E7%8E%B0/version-problem.png)
+
+
+![data-atomic](https://cdn.jsdelivr.net/gh/im/oss@master/notes/images/2020/05/25/data-atomic-20200525215651835.png)
+
+
+
 在这个例子中，Web Server A 接收到操作命令是将「a」文本改成「aa」，Web Server B 接收到操作命令是将「a」文本改成「ab」，这里我们加上了锁机制来避免同时读写数据，Web Server A 首先得到了锁，然后修改并更新数据，而 Web Server B 需要先等待数据解锁，等 Web Server B 拿到数据后它已经从「a」变成了「aa」，如果还按照 retain(1), insert(‘b’) 进行修改，数据将变成「ab」，而不是正确的「aab」，引起这个问题的原因就是旧版本不一致，Web Server B 需要根据 Web Server A 的操作进行操作转换，变成 retain(2), insert(‘b’)，然后才能对数据进行修改。
 
 因此想要解决这个问题，就必须引入版本，每次修改后都需要存储下新版本，有了版本我们就能使用 diff 功能来计算不同版本的差异，得到其它人修改的内容，然后通过 OT 合并算法合并两个操作，如下所示：
 
-![](%E5%AE%9E%E6%97%B6%E5%8D%8F%E5%90%8C%E7%BC%96%E8%BE%91%E7%9A%84%E5%AE%9E%E7%8E%B0/version-solution.png)
+
+
+![data-atomic](https://cdn.jsdelivr.net/gh/im/oss@master/notes/images/2020/05/25/data-atomic-20200525215619795.png)
+
+
 
 在 Web Server A 操作前数据版本是 v=1，操作后变成了 v=2，等到 Web Server B 处理的时候，它通过版本比较发现不一致，所以就首先通过编辑距离算法算出 Web Server A 所做的操作，然后用这个操作来对自己的操作进行转换，得到正确的新操作，从而避免了覆盖问题。
 
