--- a/notes/_posts/其他/你是哪种程序员？.md
+++ b/notes/_posts/其他/你是哪种程序员？.md
@@ -22,7 +22,7 @@ tags:
 
 **一般程序员** ：我有我的代码风格，我看得懂就行了。几个月后我也看不懂了，那就重写一遍吧。
 
-[image:97007B16-DFE3-452A-821C-71FD2AF665DF-11062-0000021F94967847/___640.jpeg]
+![___640.jpeg](/notes/note_images/97007B16-DFE3-452A-821C-71FD2AF665DF-11062-0000021F94967847/___640.jpeg)
 
 **3. 善于学习**
 
@@ -30,7 +30,7 @@ tags:
 
 **一般程序员** ：疯狂地找插件，类库和框架，常常做代码搬运工，安慰自己不要造轮子。
 
-[image:F6B1DA6C-9B00-4042-99C5-BD632EC7D35D-11062-0000021F949431FC/____640.jpeg]
+![____640.jpeg](/notes/note_images/F6B1DA6C-9B00-4042-99C5-BD632EC7D35D-11062-0000021F949431FC/____640.jpeg)
 
 **4. 对工作精益求精**
 
@@ -38,7 +38,7 @@ tags:
 
 **一般程序员** ：只喜欢开发新项目，不喜欢维护旧项目，万一搞崩了呢？
 
-[image:D4576C2E-29AA-4E18-8D4D-71C5C3C64732-11062-0000021F94925DE9/_____640.jpeg]
+![_____640.jpeg](/notes/note_images/D4576C2E-29AA-4E18-8D4D-71C5C3C64732-11062-0000021F94925DE9/_____640.jpeg)
 
 **5. 有钻研精神**
 
@@ -46,7 +46,7 @@ tags:
 
 **一般程序员** ：喜欢把问题交给别人，把代码发给被人，让别人帮他找问题。
 
-[image:2D031268-5F69-4950-8FBD-2D5AE82F8653-11062-0000021F948FD1E2/______640.jpeg]
+![______640.jpeg](/notes/note_images/2D031268-5F69-4950-8FBD-2D5AE82F8653-11062-0000021F948FD1E2/______640.jpeg)
 
 **6. 良好的情绪管理**
 
@@ -54,7 +54,7 @@ tags:
 
 **一般程序员** ：因为需求反复修改就索性说这个代码实现不了。
 
-[image:F4D94B26-8499-4256-A872-B6A31DCE9B8A-11062-0000021F948E5C31/_______640.jpeg]
+![_______640.jpeg](/notes/note_images/F4D94B26-8499-4256-A872-B6A31DCE9B8A-11062-0000021F948E5C31/_______640.jpeg)
 
 **7. 态度很谦虚**
 
@@ -62,5 +62,5 @@ tags:
 
 **一般程序员** ：生怕别人不觉得他是大牛，到处瞎逼逼。
 
-[image:59FB58F7-3710-435A-B519-E2DFE1F5049F-11062-0000021F948C8D57/________640.jpeg]
+![________640.jpeg](/notes/note_images/59FB58F7-3710-435A-B519-E2DFE1F5049F-11062-0000021F948C8D57/________640.jpeg)
 
