--- a/notes/_posts/其他/熊掌记操作技巧/熊掌记入门.md
+++ b/notes/_posts/其他/熊掌记操作技巧/熊掌记入门.md
@@ -15,7 +15,7 @@ tags:
 ## 熊掌记的界面包含三部分 🐻
 熊掌记包含三栏，供你创建、编辑和管理笔记。
 
-[image:SFNoteIntro0_File1/Bear 3 columns.png]
+![Bear 3 columns.png](/notes/note_images/SFNoteIntro0_File1/Bear 3 columns.png)
 
 * *边栏*（左侧）：在笔记中加入标签后，熊掌记就会将标签显示在侧边栏中。你可以当作它们是在写作时可即时创建并使用的文件夹。
 * *笔记列表*（中间）：你所有的笔记都在这里，按照修改日期排序。你也可以 *置顶* 笔记。
