--- a/notes/_posts/前端/javascript/实时协同编辑的实现.md
+++ b/notes/_posts/前端/javascript/实时协同编辑的实现.md
@@ -202,7 +202,7 @@ insert('FE')
 
 首先第一个问题是顺序问题，因为 OT 等算法都是依赖顺序的，不同顺序会导致结果不同，我们通过下面这张图来说明：
 
-[image:61C2F63E-CB80-4158-A550-8ED2523B1871-401-000007B436F6EBEA/order-problem.png]
+![order-problem.png](/notes/note_images/61C2F63E-CB80-4158-A550-8ED2523B1871-401-000007B436F6EBEA/order-problem.png)
 假设 `Client A` 在做两次修改时发了两个异步请求，可能因为网络延迟导致第二个请求反而先到了，导致最终服务器版本和 `Client A` 所看到的不一致，同样在服务器发往其它客户端的请求时也会出现乱序的问题，如图中 `Client B` 也有问题。
 
 这个问题的解决方法很简单，我们可以在客户端和服务器端都加上队列来保证请求顺序，等前一个请求结束后再发下一个请求。
@@ -211,7 +211,7 @@ insert('FE')
 
 如果有多台服务器，或者有多个线程/进程在同时处理请求时就会遇到覆盖问题，因为读写数据库并不是原子操作，比如下面的例子：
 
-[image:37D9CB53-A7A9-4545-8337-1B46E418BE5F-401-000007B436D72DD5/data-atomic.png]
+![data-atomic.png](/notes/note_images/37D9CB53-A7A9-4545-8337-1B46E418BE5F-401-000007B436D72DD5/data-atomic.png)
 `Web Server A` 和 `Web Server B` 同时访问数据库，结果导致 `Web Server A` 的修改被覆盖了。
 
 好在这种问题还算比较常见，解决办法可以有 3 种：
@@ -228,12 +228,12 @@ insert('FE')
 
 在前面的例子中，两段新文本的修改都是基于同一个旧版本的，如果旧版本不一样，就有可能出错，具体可以通过下面这张图来解释：
 
-[image:DC4A4083-25DF-4D9F-9BEA-138FE5CC6D18-401-000007B436BC1F19/version-problem.png]
+![version-problem.png](/notes/note_images/DC4A4083-25DF-4D9F-9BEA-138FE5CC6D18-401-000007B436BC1F19/version-problem.png)
 在这个例子中，Web Server A 接收到操作命令是将「a」文本改成「aa」，Web Server B 接收到操作命令是将「a」文本改成「ab」，这里我们加上了锁机制来避免同时读写数据，Web Server A 首先得到了锁，然后修改并更新数据，而 Web Server B 需要先等待数据解锁，等 Web Server B 拿到数据后它已经从「a」变成了「aa」，如果还按照 `retain(1), insert('b')` 进行修改，数据将变成「ab」，而不是正确的「aab」，引起这个问题的原因就是旧版本不一致，Web Server B 需要根据 Web Server A 的操作进行操作转换，变成 `retain(2), insert('b')` ，然后才能对数据进行修改。
 
 因此想要解决这个问题，就必须引入版本，每次修改后都需要存储下新版本，有了版本我们就能使用 diff 功能来计算不同版本的差异，得到其它人修改的内容，然后通过 OT 合并算法合并两个操作，如下所示：
 
-[image:901AC6E0-E7ED-4CC0-BCE0-1256AFA161D2-401-000007B4369BF595/version-solution.png]
+![version-solution.png](/notes/note_images/901AC6E0-E7ED-4CC0-BCE0-1256AFA161D2-401-000007B4369BF595/version-solution.png)
 在 `Web Server A` 操作前数据版本是 `v=1` ，操作后变成了 `v=2` ，等到 `Web Server B` 处理的时候，它通过版本比较发现不一致，所以就首先通过编辑距离算法算出 `Web Server A` 所做的操作，然后用这个操作来对自己的操作进行转换，得到正确的新操作，从而避免了覆盖问题。
 
 如果保存所有版本会导致数据量大大增加，所以还需要再优化，比如每个服务器保存一个数据副本，但这里就不再展开了，可以看要支持分布式 还是挺麻烦的，不过目前出现了一些前后端整合的方案，如 [ShareJS](http://sharejs.org/) 和 [OpenCoweb Framework](https://github.com/opencoweb/coweb) ，可以参考。
