Update Note: test Update time: 2022-07-02

--- a/notes/_posts/其他/熊掌记操作技巧/熊掌记入门.md
+++ b/notes/_posts/其他/熊掌记操作技巧/熊掌记入门.md
@@ -45,5 +45,6 @@ tags:
 * 使用 Apple Pencil 或其他手写笔 [在 iPad 上速写](https://bear.app/cn/faq/Attachments/Add%20Sketches%20to%20your%20notes/)
 * 更多内容等你发现！
 
-你甚至还可以[在笔记中链接其他笔记](https://blog.bear.app/2017/03/bear-tips-link-notes-for-fun-and-profit/)。请继续浏览熊掌记为你提供的下一篇介绍：/notes/2021/12/01/管理与发布/。😉
+你甚至还可以[在笔记中链接其他笔记](https://blog.bear.app/2017/03/bear-tips-link-notes-for-fun-and-profit/)。请继续浏览熊掌记为你提供的下一篇介绍：[note.title](/notes/2021/12/01/管理与发布/) 
+。😉
 
