--- a/notes/_posts/方法与技巧.md
+++ b/notes/_posts/方法与技巧.md
@@ -8,7 +8,10 @@ tags:
 # 方法与技巧
 我们为熊掌记开发了许多实用功能，帮助你将想法尽快变成文字。继续阅读了解实用技巧。
 
-如果你想从头开始学习，你可以查看/notes/2021/12/01/熊掌记入门/、/notes/2021/12/01/管理与发布/以及/notes/2022/07/01/Bear Pro/。
+如果你想从头开始学习，你可以查看[note.title](/notes/2021/12/01/熊掌记入门/) 
+、[note.title](/notes/2021/12/01/管理与发布/) 
+以及[note.title](/notes/2022/07/01/Bear Pro/) 
+。
 
 ## 高级搜索 🔎
 熊掌记可以在你的所有笔记中快速搜索。熊掌记同时提供许多[高级搜索参数](http://bear.app/faq/Advanced%20search%20options%20in%20Bear/)，允许你只搜索特定类型的笔记内容。
@@ -56,8 +59,11 @@ tags:
 🐻❤️😊
 
 ### 了解更多
-/notes/2021/12/01/熊掌记入门/
-/notes/2021/12/01/管理与发布/
-/notes/2022/07/01/Bear Pro/
+[note.title](/notes/2021/12/01/熊掌记入门/) 
+
+[note.title](/notes/2021/12/01/管理与发布/) 
+
+[note.title](/notes/2022/07/01/Bear Pro/) 
+
 
 
