--- a/notes/_posts/前端/javascript/偏函数.md
+++ b/notes/_posts/前端/javascript/偏函数.md
@@ -8,7 +8,8 @@ tags:
 ---
 
 # 偏函数
-偏函数是 /notes/2021/12/01/函数柯里化/  运算的一种特定应用场景。简单描述，就是把一个函数的某些参数先固化，也就是设置默认值，返回一个新的函数，在新函数中继续接收剩余参数，这样调用这个新函数会更简单。
+偏函数是 [note.title](/notes/2021/12/01/函数柯里化/) 
+  运算的一种特定应用场景。简单描述，就是把一个函数的某些参数先固化，也就是设置默认值，返回一个新的函数，在新函数中继续接收剩余参数，这样调用这个新函数会更简单。
 
 **下面是一个类型检测函数，接收两个参数，第 1 个表示类型字符串，第 2 个表示检测的数据。**
 
