Update Note: test, Update time: 2022-07-02

--- a/notes/_posts/其他/熊掌记操作技巧/管理与发布.md
+++ b/notes/_posts/其他/熊掌记操作技巧/管理与发布.md
@@ -10,9 +10,9 @@ tags:
 # 管理与发布
 ![Organize@2x.jpg](/notes/note_images/SFNoteIntro1_File0/Organize@2x.jpg)
 
-让我们进一步了解熊掌记及其功能。如果你想要从头开始，请回到[note.title](/notes/2021/12/01/熊掌记入门/) 
-，也可以直接跳转到[note.title](/notes/2022/07/01/Bear Pro/) 
-以及[note.title](/notes/2021/12/01/方法与技巧/) 
+让我们进一步了解熊掌记及其功能。如果你想要从头开始，请回到[熊掌记入门](/notes/2021/12/01/熊掌记入门/)
+，也可以直接跳转到[Bear Pro](/notes/2022/07/01/Bear-Pro/)
+以及[方法与技巧](/notes/2021/12/01/方法与技巧/)
 。
 
 ## 在任何地点工作 ☁️
@@ -36,7 +36,7 @@ tags:
 * 你可以在笔记正文的任何位置插入标签（标题除外）——开头、结尾、每段之后，都可以。这完全由你决定。
 * 将一篇或多篇笔记拖放到侧边栏上的标签即可为这些笔记批量添加对应标签。
 
-阅读 [note.title](/notes/2021/12/01/熊掌记入门/) 
+阅读 [熊掌记入门](/notes/2021/12/01/熊掌记入门/)
  了解更多关于熊掌记排版布局的核心功能。
 
 ### 别急，还有更多！ 
@@ -55,15 +55,15 @@ tags:
 在信息面板的*字数统计工具*中你可了解字数、段落数和预估的*阅读时间*。
 
 ## 了解 Bear Pro 🐻🚀
-继续阅读下一篇笔记——[note.title](/notes/2022/07/01/Bear Pro/) 
+继续阅读下一篇笔记——[Bear Pro](/notes/2022/07/01/Bear-Pro/)
 ，了解如何在多设备间同步，获得更多导出选项以及不断增加的[精美主题](bear://x-callback-url/open-themes) ，为你提供更完美的书写环境。
 
 ### 了解更多
-[note.title](/notes/2021/12/01/熊掌记入门/) 
+[熊掌记入门](/notes/2021/12/01/熊掌记入门/)
 
-[note.title](/notes/2021/12/01/方法与技巧/) 
+[方法与技巧](/notes/2021/12/01/方法与技巧/)
 	
-[note.title](/notes/2022/07/01/Bear Pro/) 
+[Bear Pro](/notes/2022/07/01/Bear-Pro/)
 
 
  
