--- a/notes/_posts/方法与技巧.md
+++ b/notes/_posts/方法与技巧.md
@@ -8,9 +8,9 @@ tags:
 # 方法与技巧
 我们为熊掌记开发了许多实用功能，帮助你将想法尽快变成文字。继续阅读了解实用技巧。
 
-如果你想从头开始学习，你可以查看[note.title](/notes/2021/12/01/熊掌记入门/) 
-、[note.title](/notes/2021/12/01/管理与发布/) 
-以及[note.title](/notes/2022/07/01/Bear Pro/) 
+如果你想从头开始学习，你可以查看[熊掌记入门](/notes/2021/12/01/熊掌记入门/)
+、[管理与发布](/notes/2021/12/01/管理与发布/)
+以及[Bear Pro](/notes/2022/07/01/Bear-Pro/)
 。
 
 ## 高级搜索 🔎
@@ -59,11 +59,11 @@ tags:
 🐻❤️😊
 
 ### 了解更多
-[note.title](/notes/2021/12/01/熊掌记入门/) 
+[熊掌记入门](/notes/2021/12/01/熊掌记入门/)
 
-[note.title](/notes/2021/12/01/管理与发布/) 
+[管理与发布](/notes/2021/12/01/管理与发布/)
 
-[note.title](/notes/2022/07/01/Bear Pro/) 
+[Bear Pro](/notes/2022/07/01/Bear-Pro/)
 
 
 
