--- a/notes/_posts/其他/你是哪种程序员？.md
+++ b/notes/_posts/其他/你是哪种程序员？.md
@@ -15,6 +15,7 @@ tags:
 正做错了也是你们要求的，不是我的锅
 
 ![__640.jpeg](/notes/note_images/7DC5A809-4848-4512-B7AA-A3452C2CE028-11062-0000021F9498BC8D/640.jpeg)
+![__640.jpeg](/notes/note_images/7DC5A809-4848-4512-B7AA-A3452C2CE028-11062-0000021F9498BC8D/__640.jpeg)
 
 ![CEB7AF4C-99B4-406D-AAFF-1F96A8896085.png](/notes/note_images/97AC6EE9-0D80-42F5-B225-1CE2534FC782-943-00003E623A6FB7DE/CEB7AF4C-99B4-406D-AAFF-1F96A8896085.png)
 
